# extendr

./: .Rprofile  .gitignore  .travis.yml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CODE-OF-CONDUCT.md  CONTRIBUTING.md  CONTRIBUTORS.md  Cargo.toml  LICENSE  LICENSE.md  MAINTAINERS_GUIDE.md  README.md  README_on_main.md  Untitled.R  bump.sh  ci-cargo.ps1  crates.js  help.html  index.html  justfile  ld_help.txt  libgcc_mock.ps1  marshaling_rules.md  paper.bib  paper.md  publish.sh  rextendr_example.R  rust-toolchain.toml  search-index.js  setenv.ps1  settings.html  source-files.js  src-files.js  try-cargo.ps1
extendr-api/: 0001-Add-single_threaded-and-wrap-R-api-writes.patch  Cargo.toml  README.md  build.rs
extendr-api/examples/: plotting_from_rust.rs  returning_lists_and_strings.rs  returning_scalars.rs
extendr-api/src/: alloc.rs  args.rs  array.rs  deserializer.rs  engine.rs  error.rs  functions.rs  iter.rs  lang.rs  lang_macros.rs  lib.rs  logical.rs  matrix.rs  metadata.rs  na.rs  ownership.rs  prelude.rs  ralloc.rs  rmacros.rs  robj.rs  robj_ndarray.rs  serializer.rs  signal.rs  split.rs  tests.rs  thread_safety.rs  tracing.rs  wrapper.rs
extendr-api/src/cnd/: mod.rs
extendr-api/src/conditions/: mod.rs
extendr-api/src/contract/: mod.rs  scalar.rs
extendr-api/src/conversions/: coerce.rs  from_integerish.rs  mod.rs  try_into_int.rs
extendr-api/src/graphics/: color.rs  device_callback.rs  device_descriptor.rs  device_driver.rs  mod.rs
extendr-api/src/io/: load.rs  mod.rs  outstream.rs  save.rs
extendr-api/src/maths/: mod.rs  polynomial.rs
extendr-api/src/optional/: either.rs  faer.rs  mod.rs  nalgebra.rs  ndarray.rs  ndarray_0_15.rs  ndarray_0_16.rs
extendr-api/src/ownership/: test.rs
extendr-api/src/rng/: mod.rs
extendr-api/src/robj/: debug.rs  from_robj.rs  hash.rs  into_robj.rs  iter.rs  mod.rs  operators.rs  rinternals.rs  symbols.rs  tests.rs  try_from_robj.rs
extendr-api/src/scalar/: macros.rs  mod.rs  rbool.rs  rcplx.rs  rcplx_default.rs  rcplx_full.rs  rfloat.rs  rint.rs
extendr-api/src/wrapper/: altrep.rs  array.rs  char.rs  character.rs  complexes.rs  dataframe.rs  doubles.rs  ellipsis.rs  environment.rs  expr.rs  externalptr.rs  factors.rs  function.rs  integers.rs  lang.rs  list.rs  logicals.rs  macros.rs  matrix.rs  mod.rs  nullable.rs  pairlist.rs  polars.rs  primitive.rs  promise.rs  raw.rs  rstr.rs  s4.rs  strings.rs  symbol.rs  unsafe_externalptr.rs  wrapper_macros.rs
extendr-api/tests/: altrep_tests.rs  call_tests.rs  dataframe_tests.rs  debug_tests.rs  derive_into_list.rs  derive_into_robj.rs  deserializer_tests.rs  either_try_from_tests.rs  extendr_extern_c_tests.rs  extendr_macro.rs  extendr_maro_tests.rs  extendr_module_tests.rs  externalptr_test.rs  externalptr_tests.rs  features.rs  from_iterator_tests.rs  graphics_tests.rs  hash_tests.rs  into_iterator_tests.rs  io_tests.rs  issue-397-memory-allocation.rs  macro_tests.rs  na_tests.rs  ndarray_try_from_tests.rs  non_api_tests.rs  ownership_tests.rs  parse_tests.rs  rarray_tests.rs  ref_mut_robj.rs  rng_tests.rs  scalar_ordering_tests.rs  scalar_tests.rs  serializer_tests.rs  test_io.rs  thread_safety_tests.rs  try_from_tests.rs  unwind_tests.rs  vector_tests.rs
extendr-api/tests/optional/: mod.rs  ndarray.rs  non_api.rs  serde.rs
extendr-engine/: Cargo.toml  README.md  build.rs
extendr-engine/src/: lib.rs
extendr-ffi/: .gitignore  Cargo.toml  README.md  build.rs
extendr-ffi/src/: altrep.rs  backports.rs  graphics.rs  lib.rs  non_api.rs  symbols.rs
extendr-graphics/: Cargo.toml  README.md  build.rs
extendr-graphics/src/: color.rs  device_descriptor.rs  device_driver.rs  lib.rs
extendr-graphics/tests/: graphics_tests.rs
extendr-macros/: Cargo.toml  README.md
extendr-macros/src/: R.rs  call.rs  canbena.rs  coerce_native.rs  dataframe.rs  extendr_conversion.rs  extendr_extern_c.rs  extendr_function.rs  extendr_impl.rs  extendr_module.rs  extendr_options.rs  extendr_struct.rs  lib.rs  list.rs  list_struct.rs  native_slice.rs  output_info.rs  output_r.rs  pairlist.rs  pairs.rs  utils.rs  wrappers.rs
extendr-macros/tests/: test_derive_into_dataframe.rs  test_derive_into_list.rs  trybuild.rs
extendr-macros/tests/cases/: case-canbena-derive.rs  case-canbena-derive.stderr  case-extendr-macro.rs  case-extendr-macro.stderr
extendr-macros/tests/extendr_impl/: extendr_impl_fail.rs  extendr_impl_fail.stderr
xtask/: Cargo.toml  README.md  all.html  fn.main.html  index.html  sidebar-items.js
xtask/cli/: enum.Commands.html  fn.parse.html  index.html  sidebar-items.js  struct.Cli.html  struct.RCmdCheckArg.html
xtask/cli/devtools_test/: index.html  sidebar-items.js  struct.DevtoolsTestArg.html
xtask/cli/msrv/: index.html  sidebar-items.js  struct.MsrvArg.html
xtask/cli/r_cmd_check/: enum.ErrorOn.html  index.html  sidebar-items.js  struct.RCmdCheckArg.html
xtask/commands/: index.html  sidebar-items.js
xtask/commands/cargo_fmt/: fn.run.html  index.html
xtask/commands/cargo_fmt_check/: fn.run.html  index.html
xtask/commands/cargo_msrv/: fn.run.html  index.html
xtask/commands/devtools_test/: constant.CARGO_TOML.html  constant.RUST_FOLDER_PATH.html  constant.R_FOLDER_PATH.html  fn.get_extendr_api_entry.html  fn.get_replacement_path.html  fn.read_file_with_line_ending.html  fn.run.html  fn.run_tests.html  fn.swap_extendr_api_path.html  fn.write_file_preserve_line_ending.html  index.html  sidebar-items.js  struct.DocumentHandle.html
xtask/commands/generate_docs/: fn.run.html  index.html
xtask/commands/r_cmd_check/: enum.RCmdCheckError.html  enum.RCmdCheckErrorOn.html  fn.construct_check_dir_path.html  fn.run.html  fn.run_r_cmd_check.html  index.html  sidebar-items.js
xtask/commands/rextendr_document/: fn.run.html  fn.run_rextendr_document.html  index.html  sidebar-items.js
xtask/extendrtests/: index.html  sidebar-items.js
xtask/extendrtests/path_helper/: index.html  sidebar-items.js  trait.RCompatiblePath.html
xtask/extendrtests/with_absolute_path/: constant.CARGO_TOML.html  constant.RUST_FOLDER_PATH.html  index.html  (+11 more)
xtask/src/: cli.rs  main.rs
(+11435 files in other folders)
