[workspace]
resolver = "2"
members = [
  "extendr-api",
  "extendr-engine",
  "extendr-ffi",
  "extendr-macros",
]

[workspace.package]
version = "0.8.1"
edition = "2021"
rust-version = "1.71"
repository = "https://github.com/extendr/extendr"
license = "MIT"

[workspace.dependencies]
extendr-ffi = { path = "./extendr-ffi", workspace = true }
# When updating extendr's version, this version also needs to be updated
extendr-macros = { path = "./extendr-macros", workspace = true }
