[package]
name = "extendr-engine"
description = "Safe and user friendly bindings to the R programming language."
version.workspace = true
authors.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
extendr-ffi = { workspace = true }
ctor = "0.5.0"

[features]
default = []

# All features to test
tests-all = []
