[package]
name = "extendr-engine"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Safe and user friendly bindings to the R programming language."
repository.workspace = true
license.workspace = true

[dependencies]
ctor = "0.6.0"
extendr-ffi = { workspace = true }

[features]
default = []

# All features to test
tests-all = []
