[package]
name = "extendr-ffi"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Barebone bindings to `libR` for use in extendr."
repository.workspace = true
license.workspace = true
links = "R"

[features]
default = []
bytemuck = ["dep:bytemuck"]
non-api = []

[dependencies]
bytemuck = { version = "1.24.0", features = ["min_const_generics", "derive", "must_cast"], optional = true }
