[package]
name = "extendr-ffi"
description = "Barebone bindings to `libR` for use in extendr."
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
links = "R"

[features]
default = []
bytemuck = ["dep:bytemuck"]
non-api = []

[dependencies]
bytemuck = { version = "1.24.0", features = ["min_const_generics", "derive", "must_cast"], optional = true }
