[package]
name = "extendr-graphics"
version = "0.2.0"
authors = [
    "andy-thomason <andy@andythomason.com>",
    "Thomas Down",
    "Mossa Merhi Reimert <mossa@sund.ku.dk>",
    "Claus O. Wilke <wilke@austin.utexas.edu>",
    "Hiroaki Yutani",
    "Ilia A. Kosenkov <ilia.kosenkov@outlook.com>"
]
edition = "2018"
description = "Safe and user friendly bindings to the R programming language."
license = "MIT"
repository = "https://github.com/extendr/extendr"

[dependencies]
libR-sys = "0.2.2"
extendr-api = { path = "../extendr-api", version="0.2.0" }
libc = "0.2"

[dev-dependencies]
# start_r() is needed for testing
extendr-engine = { path = "../extendr-engine", version="0.2.0" }

[features]
default = []

# All features to test
tests-all = ["libR-sys/use-bindgen"]
