[package]
name = "extendr-macros"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true
description = "Generate bindings from R to Rust."
repository.workspace = true
license.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = { version = "1.0" }
quote = "1.0"
syn = { version = "=2.0.106", features = ["extra-traits", "full"] }

[dev-dependencies]
extendr-api = { path = "../extendr-api" }
extendr-engine = { path = "../extendr-engine" }
extendr-ffi = { workspace = true }
trybuild = "1.0"
