[package]
name = "xtask"
description = "Facilitates extendr-developer tasks through `cargo`"
license.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
toml_edit = "0.20.2"
xshell = "*"
