[package]
name = "xtask"
description = "Facilitates extendr-developer tasks through `cargo`"
license.workspace = true
rust-version.workspace = true
repository.workspace = true
version.workspace = true
edition.workspace = true
authors.workspace = true
publish = false

[dependencies]
clap = { version = "4.4.6", features = ["derive"] }
toml_edit = "0.21.0"
xshell = "0.2.5"
