[workspace]
resolver = "2"

[package]
name = "extendrtests"
version = "0.7.1"
authors = [
    "andy-thomason <andy@andythomason.com>",
    "Claus O. Wilke <wilke@austin.utexas.edu>",
    "Ilia Kosenkov <ilia.kosenkov@outlook.com",
]
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[features]
full-functionality = []
serde = ["extendr-api/serde"]
faer = []
graphics = []
ndarray = []

# The minimal set of features without all optional ones
tests-minimal = []

tests = ["tests-minimal", "ndarray", "faer", "serde", "num-complex", "either"]

tests-graphics = ["tests-minimal", "graphics"]

# Literally all features to test
tests-all = ["tests", "graphics"]

[dependencies]
extendr-api = { version = "*", features = [
    "graphics",
    "ndarray",
    "faer",
    "either",
] }

[patch.crates-io]
## This is configured to work with RStudio features.
## Replace by absolute path to simplify testing.
## CI overrides this path.
extendr-api = { path = "../../../../extendr-api" }
## This allows to run `rcmdcheck` from `./tests/extendrtests/`
# extendr-api = { path = "../../../../../../../../../extendr/extendr-api" }


## Build against current extendr version on github. Not recommended
## for development work.
#extendr-api = { git = "https://github.com/extendr/extendr"}
