[workspace]
resolver = "2"

[package]
name = "extendrtests"
version = "0.7.1"
authors = [
    "andy-thomason <andy@andythomason.com>",
    "Claus O. Wilke <wilke@austin.utexas.edu>",
    "Ilia Kosenkov <ilia.kosenkov@outlook.com",
]
edition = "2021"
publish = false

[lib]
crate-type = ["staticlib"]

[features]
full-functionality = ["extendr-api/full-functionality"]
serde = ["extendr-api/serde"]
faer = ["extendr-api/faer"]
graphics = ["extendr-api/graphics"]
ndarray = ["extendr-api/ndarray"]
num-complex = ["dep:num-complex", "extendr-api/num-complex"]
either = ["dep:either", "extendr-api/either"]

# The minimal set of features without all optional ones
tests-minimal = []

tests = ["tests-minimal", "ndarray", "faer", "serde", "num-complex", "either"]

tests-graphics = ["tests-minimal", "graphics"]

# Literally all features to test
tests-all = ["tests", "graphics"]

[dependencies]
extendr-api = { version = "*", features = [
    "graphics",
    "ndarray",
    "faer",
    "either",
] }
num-complex = { version = "0.4.6", optional = true }
either = { version = "1.8.1", optional = true }

[patch.crates-io]
## This is configured to work with RStudio features.
## Replace by absolute path to simplify testing.
## CI overrides this path.
extendr-api = { path = "../../../../extendr-api" }
## This allows to run `rcmdcheck` from `./tests/extendrtests/`
# extendr-api = { path = "../../../../../../../../../extendr/extendr-api" }


## Build against current extendr version on github. Not recommended
## for development work.
#extendr-api = { git = "https://github.com/extendr/extendr"}
