[package]
name = "extendrtests"
version = "0.7.1"
authors = [
  "andy-thomason <andy@andythomason.com>",
  "Claus O. Wilke <wilke@austin.utexas.edu>",
  "Ilia Kosenkov <ilia.kosenkov@outlook.com",
]
edition = "2021"
rust-version = "1.65"
publish = false

[workspace]
resolver = "2"

[lib]
crate-type = ["staticlib"]
name = "extendrtests"

[dependencies]
extendr-api = { version = "*", features = [
  "either",
  "faer",
  "graphics",
  "ndarray",
] }

[features]
faer = []
full-functionality = []
graphics = []
ndarray = []
serde = ["extendr-api/serde"]

[patch.crates-io]
## This is configured to work with RStudio features.
## Replace by absolute path to simplify testing.
## CI overrides this path.
extendr-api = { path = "../../../../extendr-api" }
## This allows to run `rcmdcheck` from `./tests/extendrtests/`
# extendr-api = { path = "../../../../../../../../../extendr/extendr-api" }

## Build against current extendr version on github. Not recommended
## for development work.
# extendr-api = { git = "https://github.com/extendr/extendr"}
