[workspace]
resolver = "2"

[package]
name = 'headless'
publish = false
version = '0.1.0'
edition = '2021'

[lib]
crate-type = [ 'staticlib' ]
name = 'headless'

[dependencies]
extendr-api = { path = "../../../../extendr-api" }
# libR-sys = "*"
# Make sure this is the same as in `../../../../Cargo.toml`
libR-sys = { git = "https://github.com/extendr/libR-sys", rev = "b26b858230a5ab9675b2b69eea74ababc9a895c9" }
